validate what a plugin declares, and accept a compile contract
value-types asks types() and componentTypes() now that the contract's value
vocabulary is gone: every PluginType answers a class and a fresh value (or a
null fresh() beside a freshSource(), as the contract allows), no class is
declared by two plugins on the classpath -- the host's own composition rule --
and every component type gives the same components back from
build(components(fresh())). Parts are compared, not values, so a type with no
equals passes. The check id stays value-types; the constant is Check.TYPES.

pom-scopes accepts a compile-scoped contract. @Param and @Managed are the
contract's, so the SDK hands it on at compile, and PluginLoader is parent-first
for com.botmaker.plugin.api.** whatever the scope.

Value type ids leave the subject, the registry, Bundled and RegistryEntry; an
old entry's field is read and ignored, and nothing rewrites the file.
PluginSubject.pinnedVersion goes with catalog(pin).

ArchetypeSkeletonTest compiles every shipped source and the skeleton's own
test. PluginValidatorTest's fixtures fail rather than skip when they stop
compiling, which is how they had been passing against a contract they no
longer compiled against.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012CTgD6EMJj6K1eqbyZnJFS