@@ -18,11 +18,11 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 /**
- * The seven checks, against plugins compiled here.
+ * The eight checks, against plugins compiled here.
  *
  * <p><b>The fixtures are compiled rather than mocked, and that is the point of the file.</b> Every failure
  * these checks exist to catch is a failure of a real classloader over real bytecode — a services file naming
- * a class that is not there, a catalogued member that was renamed, two plugins claiming one value type id.
+ * a class that is not there, a catalogued member that was renamed, two plugins declaring one class.
  * A mock {@code StudioPlugin} would pass through the same code and prove none of it, because it would never
  * have been loaded by {@code PluginLoader} in the first place.
  */
@@ -32,28 +32,55 @@ class PluginValidatorTest {
     // fixtures
     // ------------------------------------------------------------------------------------------------
 
-    /** The good case: a well-formed id, one catalogued facade with one hidden member, one value type. */
+    /**
+     * The good case: a well-formed id, one catalogued facade with one hidden member, one declared type that
+     * is also a component type.
+     *
+     * <p>{@code Greeting} has no {@code equals}, on purpose: most classes a plugin writes have none, and the
+     * round trip compares parts so that such a type still passes.
+     */
     private static final String GOOD_PLUGIN = """
             package p;
             import com.botmaker.plugin.api.StudioPlugin;
             import com.botmaker.plugin.api.catalog.PaletteCatalog;
-            import com.botmaker.plugin.api.value.ValueCatalog;
-            import com.botmaker.plugin.api.value.ValueCodec;
-            import com.botmaker.plugin.api.value.ValueType;
+            import com.botmaker.plugin.api.slot.ValueContext;
+            import com.botmaker.plugin.api.value.ComponentType;
+            import com.botmaker.plugin.api.value.PluginType;
+            import java.util.List;
             public final class GoodPlugin implements StudioPlugin {
                 @Override public String id() { return "com.example.good"; }
                 @Override public String displayName() { return "Good"; }
-                @Override public PaletteCatalog catalog(String pin) { return PaletteCatalog.of(Api.class); }
-                @Override public ValueCatalog valueTypes() {
-                    return ValueCatalog.builder()
-                        .add(ValueType.of("com.example.good.greeting").label("Greeting").source("String").build(),
-                             new ValueCodec<String>() {
-                                 @Override public String parse(String wire) { return wire == null ? "" : wire; }
-                                 @Override public String store(String value) { return value; }
-                                 @Override public String literal(String value) { return "\\"" + value + "\\""; }
-                             })
-                        .build();
+                @Override public PaletteCatalog catalog() { return PaletteCatalog.of(Api.class); }
+                @Override public List<PluginType<?>> types() { return List.of(new GreetingType()); }
+
+                public static final class Greeting {
+                    final String who;
+                    final int times;
+                    public Greeting(String who, int times) { this.who = who; this.times = times; }
                 }
+
+                public static final class GreetingType implements PluginType<Greeting>, ComponentType<Greeting> {
+                    @Override public Class<Greeting> type() { return Greeting.class; }
+                    @Override public Greeting fresh() { return new Greeting("world", 1); }
+                    @Override public javafx.scene.Node editor(ValueContext ctx) { return null; }
+                    @Override public List<Class<?>> componentTypes() { return List.of(String.class, int.class); }
+                    @Override public List<Object> components(Greeting g) { return List.of(g.who, g.times); }
+                    @Override public Greeting build(List<Object> parts) {
+                        return new Greeting((String) parts.get(0), (Integer) parts.get(1));
+                    }
+                }
+            }
+            """;
+
+    /** A second plugin declaring the good plugin's own class, which a host cannot load beside it. */
+    private static final String OTHER_PLUGIN = """
+            package p;
+            import com.botmaker.plugin.api.StudioPlugin;
+            import com.botmaker.plugin.api.value.PluginType;
+            import java.util.List;
+            public final class OtherPlugin implements StudioPlugin {
+                @Override public String id() { return "com.example.other"; }
+                @Override public List<PluginType<?>> types() { return List.of(new GoodPlugin.GreetingType()); }
             }
             """;
 
@@ -107,7 +134,7 @@ class PluginValidatorTest {
     @Test
     void every_check_is_reported_even_when_the_first_one_fails() {
         List<CheckResult> results = PluginValidator.validate(
-                PluginSubject.local(List.of(), null, "1.0.0"));
+                PluginSubject.local(List.of(), null));
         assertEquals(List.of(Check.values()), results.stream().map(CheckResult::check).toList());
         assertTrue(results.getFirst().failed());
         // POM_SCOPES and PLUGIN_DEPS still run — both read a file and need nothing loaded, so a broken
@@ -123,7 +150,7 @@ class PluginValidatorTest {
     @Test
     void a_classpath_entry_that_does_not_exist_fails_the_first_check(@TempDir Path dir) {
         List<CheckResult> results = PluginValidator.validate(
-                PluginSubject.local(List.of(dir.resolve("nope")), null, ""));
+                PluginSubject.local(List.of(dir.resolve("nope")), null));
         assertEquals(Status.FAIL, result(results, Check.CLASSPATH).status());
         assertEquals(Status.SKIP, result(results, Check.LOADS).status());
     }
@@ -137,11 +164,11 @@ class PluginValidatorTest {
         Path classes = compile(dir, GOOD_PLUGIN, GOOD_API);
         // deliberately no services file
         List<CheckResult> results = PluginValidator.validate(
-                PluginSubject.local(List.of(classes), null, ""));
+                PluginSubject.local(List.of(classes), null));
         CheckResult loads = result(results, Check.LOADS);
         assertEquals(Status.FAIL, loads.status());
         assertTrue(loads.detail().stream().anyMatch(d -> d.contains("META-INF/services")), loads::toString);
-        for (Check check : List.of(Check.ID, Check.PALETTE, Check.VALUE_TYPES, Check.EDITORS)) {
+        for (Check check : List.of(Check.ID, Check.PALETTE, Check.TYPES, Check.EDITORS)) {
             assertEquals(Status.SKIP, result(results, check).status(), check::name);
         }
     }
@@ -165,8 +192,7 @@ class PluginValidatorTest {
     void an_id_the_registry_already_holds_fails(@TempDir Path dir) throws IOException {
         Path classes = compile(dir, GOOD_PLUGIN, GOOD_API);
         services(classes, "p.GoodPlugin");
-        PluginSubject subject = new PluginSubject(List.of(classes), null, "",
-                Set.of("com.example.good"), Set.of());
+        PluginSubject subject = new PluginSubject(List.of(classes), null, Set.of("com.example.good"));
         CheckResult id = result(PluginValidator.validate(subject), Check.ID);
         assertEquals(Status.FAIL, id.status());
         assertTrue(id.detail().getFirst().contains("already registered"), id.detail()::toString);
@@ -193,30 +219,99 @@ class PluginValidatorTest {
     }
 
     // ------------------------------------------------------------------------------------------------
-    // value types
+    // types
     // ------------------------------------------------------------------------------------------------
 
     @Test
-    void a_value_type_id_the_registry_already_holds_fails(@TempDir Path dir) throws IOException {
-        Path classes = compile(dir, GOOD_PLUGIN, GOOD_API);
-        services(classes, "p.GoodPlugin");
-        PluginSubject subject = new PluginSubject(List.of(classes), null, "", Set.of(),
-                Set.of("com.example.good.greeting"));
-        CheckResult types = result(PluginValidator.validate(subject), Check.VALUE_TYPES);
+    void the_good_plugins_type_round_trips(@TempDir Path dir) throws IOException {
+        CheckResult types = result(PluginValidator.validate(subject(dir, GOOD_POM)), Check.TYPES);
+        assertEquals(Status.PASS, types.status(), types::toString);
+        assertTrue(types.detail().getFirst().contains("1 round-tripped"), types.detail()::toString);
+    }
+
+    /** The host's own rule, asked before anyone installs the pair: one class, one owner. */
+    @Test
+    void two_plugins_may_not_own_one_type(@TempDir Path dir) throws IOException {
+        Path classes = compile(dir, GOOD_PLUGIN, GOOD_API, OTHER_PLUGIN);
+        services(classes, "p.GoodPlugin", "p.OtherPlugin");
+        CheckResult types = result(PluginValidator.validate(PluginSubject.local(List.of(classes), null)),
+                Check.TYPES);
         assertEquals(Status.FAIL, types.status());
-        assertTrue(types.detail().getFirst().contains("already registered"), types.detail()::toString);
+        assertTrue(types.detail().getFirst().contains("already declares"), types.detail()::toString);
+    }
+
+    /** A value that changes on the way through {@code build} is a value rewritten on every save. */
+    @Test
+    void a_component_type_must_round_trip(@TempDir Path dir) throws IOException {
+        PluginSubject subject = subject(dir, GOOD_POM,
+                GOOD_PLUGIN.replace("new Greeting((String) parts.get(0),", "new Greeting(\"someone else\","),
+                GOOD_API);
+        CheckResult types = result(PluginValidator.validate(subject), Check.TYPES);
+        assertEquals(Status.FAIL, types.status());
+        assertTrue(types.detail().getFirst().contains("does not survive"), types.detail()::toString);
+    }
+
+    @Test
+    void a_type_with_no_fresh_value_fails(@TempDir Path dir) throws IOException {
+        PluginSubject subject = subject(dir, GOOD_POM,
+                GOOD_PLUGIN.replace("return new Greeting(\"world\", 1);", "return null;"), GOOD_API);
+        CheckResult types = result(PluginValidator.validate(subject), Check.TYPES);
+        assertEquals(Status.FAIL, types.status());
+        assertTrue(types.detail().getFirst().contains("neither fresh() nor freshSource()"),
+                types.detail()::toString);
+    }
+
+    /**
+     * The contract's exception, and the SDK's case: a type whose fresh form is a call the bot evaluates
+     * answers {@code freshSource()} and a null {@code fresh()}. The first real SDK validation refused six of
+     * its types for exactly this before the check knew it.
+     */
+    @Test
+    void a_type_that_starts_as_a_live_expression_passes(@TempDir Path dir) throws IOException {
+        PluginSubject subject = subject(dir, GOOD_POM, GOOD_PLUGIN.replace(
+                "@Override public Greeting fresh() { return new Greeting(\"world\", 1); }",
+                "@Override public Greeting fresh() { return null; }"
+                        + " @Override public String freshSource() { return \"p.Api.lastGreeting()\"; }"),
+                GOOD_API);
+        CheckResult types = result(PluginValidator.validate(subject), Check.TYPES);
+        assertEquals(Status.PASS, types.status(), types::toString);
+    }
+
+    /**
+     * A plugin carried only because the judged one depends on it answers for its own soundness under its
+     * own entry — the SDK must not be refused for plugin-basics' types.
+     */
+    @Test
+    void a_plugin_that_is_not_judged_is_not_asked_for_a_fresh_value(@TempDir Path dir) throws IOException {
+        Path classes = compile(dir,
+                GOOD_PLUGIN.replace("return new Greeting(\"world\", 1);", "return null;"), GOOD_API);
+        services(classes, "p.GoodPlugin");
+        PluginSubject subject = PluginSubject.local(List.of(classes), null).about("com.example.someone.else");
+        assertEquals(Status.PASS, result(PluginValidator.validate(subject), Check.TYPES).status());
     }
 
     // ------------------------------------------------------------------------------------------------
     // pom scopes
     // ------------------------------------------------------------------------------------------------
 
+    /**
+     * A {@code compile} contract passes since 2026-09-23: a bot writes {@code @Param} and {@code @Managed},
+     * so the SDK hands the contract on, and the loader is parent-first for it whatever the scope.
+     */
     @Test
-    void a_contract_that_is_not_provided_fails(@TempDir Path dir) throws IOException {
+    void a_contract_at_compile_scope_passes(@TempDir Path dir) throws IOException {
         PluginSubject subject = subject(dir, GOOD_POM.replace("<scope>provided</scope>", ""));
         CheckResult scopes = result(PluginValidator.validate(subject), Check.POM_SCOPES);
+        assertEquals(Status.PASS, scopes.status(), scopes::toString);
+        assertTrue(scopes.detail().getFirst().contains("contract compile"), scopes.detail()::toString);
+    }
+
+    @Test
+    void a_contract_at_runtime_scope_fails(@TempDir Path dir) throws IOException {
+        PluginSubject subject = subject(dir, GOOD_POM.replace("<scope>provided</scope>", "<scope>runtime</scope>"));
+        CheckResult scopes = result(PluginValidator.validate(subject), Check.POM_SCOPES);
         assertEquals(Status.FAIL, scopes.status());
-        assertTrue(scopes.detail().getFirst().contains("must be `provided`"), scopes.detail()::toString);
+        assertTrue(scopes.detail().getFirst().contains("`provided` or `compile`"), scopes.detail()::toString);
     }
 
     @Test
@@ -245,7 +340,7 @@ class PluginValidatorTest {
         Path classes = compile(dir, GOOD_PLUGIN, GOOD_API);
         services(classes, "p.GoodPlugin");
         List<CheckResult> results = PluginValidator.validate(
-                PluginSubject.local(List.of(classes), null, ""));
+                PluginSubject.local(List.of(classes), null));
         assertEquals(Status.SKIP, result(results, Check.POM_SCOPES).status());
         assertFalse(results.stream().anyMatch(CheckResult::failed), () -> render(results));
     }
@@ -293,7 +388,7 @@ class PluginValidatorTest {
         services(classes, "p.GoodPlugin");
         Path pomFile = dir.resolve("pom.xml");
         Files.writeString(pomFile, pom);
-        return PluginSubject.local(List.of(classes), pomFile, "0.1.0");
+        return PluginSubject.local(List.of(classes), pomFile);
     }
 
     /**
@@ -318,14 +413,17 @@ class PluginValidatorTest {
         List<String> argv = new ArrayList<>(List.of(
                 "-cp", System.getProperty("java.class.path"), "-d", classes.toString()));
         argv.addAll(files);
-        assumeTrue(javac.run(null, null, null, argv.toArray(String[]::new)) == 0,
-                "could not compile the fixture");
+        // A failure, not an assumption: a fixture that stops compiling against the contract is this file
+        // drifting from it, and skipping would report every check in it as green.
+        assertEquals(0, javac.run(null, null, null, argv.toArray(String[]::new)),
+                "the fixture does not compile against this build's contract");
         return classes;
     }
 
-    private static void services(Path classes, String pluginClass) throws IOException {
+    private static void services(Path classes, String... pluginClasses) throws IOException {
         Path dir = Files.createDirectories(classes.resolve("META-INF/services"));
-        Files.writeString(dir.resolve("com.botmaker.plugin.api.StudioPlugin"), pluginClass + "\n");
+        Files.writeString(dir.resolve("com.botmaker.plugin.api.StudioPlugin"),
+                String.join("\n", pluginClasses) + "\n");
     }
 
     private static CheckResult result(List<CheckResult> results, Check check) {
